Ingress/Ingress-both.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressboth
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /nexus
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
