Ingress/Ingress-extension.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingresstest
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
      - path: /nexus
        backend:
          serviceName: nexus-service
          servicePort: 8081
